@@ -1,3 +1,15 @@
+2021-06-22  Jonathan Bedard  <jbedard@apple.com>
+
+        [results.webkit.org] XSS vulnerability in configuration
+        https://bugs.webkit.org/show_bug.cgi?id=227267
+        <rdar://problem/74876210>
+
+        Reviewed by Dewei Zhu.
+
+        * Scripts/libraries/resultsdbpy/resultsdbpy/__init__.py: Bump version.
+        * Scripts/libraries/resultsdbpy/resultsdbpy/view/static/js/drawer.js: Escape configuration specification.
+        * Scripts/libraries/resultsdbpy/setup.py: Bump version.
+
 2021-06-22  Saam Barati  <sbarati@apple.com>
 
         jitCompileAndSetHeuristics shouldn't return true when we fail to compile
